<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.tasks.TaskActivity">

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/baseline_sort"
        android:title="@string/label_action_filter"
        app:showAsAction="ifRoom">
    </item>

</menu>